--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,43 +1,57 @@
 name: Deploy to GitHub Pages
 
-# Run workflow on every push to the master branch
 on:
   push:
     branches: [ main ]
 
 jobs:
   deploy-to-github-pages:
-    # use ubuntu-latest image to run steps on
     runs-on: ubuntu-latest
     steps:
-    # uses GitHub's checkout action to checkout code form the master branch
-    - uses: actions/checkout@v2
-    
-    # sets up .NET Core SDK 5.0.101
-    - name: Setup .NET Core SDK
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 5.0.101
+      # 🔐 Ensure OpenSSL is available for .NET on Linux
+      - name: Install libssl
+        run: sudo apt-get update && sudo apt-get install -y libssl-dev
 
-    # publishes Blazor project to the release-folder
-    - name: Publish .NET Core Project
-      run: dotnet publish -c Release -o release --nologo
-    
-    # changes the base-tag in index.html from '/' to 'GitHubPagesDemo' to match GitHub Pages repository subdirectory
-    - name: Change base-tag in index.html from / to GitHubPagesDemo
-      run: sed -i 's/<base href="\/" \/>/<base href="\/GitHubPagesDemo\/" \/>/g' release/wwwroot/index.html
-    
-    # copy index.html to 404.html to serve the same file when a file is not found
-    - name: copy index.html to 404.html
-      run: cp release/wwwroot/index.html release/wwwroot/404.html
+      # 📥 Checkout your repo
+      - name: Checkout source code
+        uses: actions/checkout@v4
 
-    # add .nojekyll file to tell GitHub pages to not treat this as a Jekyll project. (Allow files and folders starting with an underscore)
-    - name: Add .nojekyll file
-      run: touch release/wwwroot/.nojekyll
-      
-    - name: Commit wwwroot to GitHub Pages
-      uses: JamesIves/github-pages-deploy-action@3.7.1
-      with:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        BRANCH: gh-pages
-        FOLDER: release/wwwroot
+      # ⚙️ Setup .NET 9 SDK
+      - name: Setup .NET SDK
+        uses: actions/setup-dotnet@v4
+        with:
+          dotnet-version: '9.0.x'
+
+      # 📦 Optional: Cache NuGet packages for faster builds
+      - name: Cache NuGet packages
+        uses: actions/cache@v3
+        with:
+          path: ~/.nuget/packages
+          key: ${{ runner.os }}-nuget-${{ hashFiles('**/*.csproj') }}
+          restore-keys: |
+            ${{ runner.os }}-nuget-
+
+      # 🚀 Publish the Blazor project
+      - name: Publish project
+        run: dotnet publish YourProjectFolder/YourProject.csproj -c Release -o release --nologo
+
+      # 🛠 Update base href to match GitHub Pages repo path
+      - name: Update <base> tag in index.html
+        run: |
+          sed -i 's|<base href="/" />|<base href="/GitHubPagesDemo/" />|g' release/wwwroot/index.html
+
+      # 🧭 Redirect 404s to index.html for SPA routing
+      - name: Add fallback page
+        run: cp release/wwwroot/index.html release/wwwroot/404.html
+
+      # 📁 Add .nojekyll to allow underscore folders
+      - name: Add .nojekyll
+        run: touch release/wwwroot/.nojekyll
+
+      # 🌐 Deploy to GitHub Pages
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@4.1.4
+        with:
+          branch: gh-pages
+          folder: release/wwwroot
+          token: ${{ secrets.GITHUB_TOKEN }}
