--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,8 @@ on:
 jobs:
   deploy-to-github-pages:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     steps:
       - name: Install libssl
         run: sudo apt-get update && sudo apt-get install -y libssl-dev
